multer, auth, & other fix
