# api/controllers/UserController.js
@@ -1,11 +1,17 @@
+const { Op } = require("sequelize");
 const { user, role } = require("../models");
+const bcrypt = require("../helpers/bcrypt");
+const jwt = require("../helpers/jwt");
 
 class UserController {
   static async getAll(req, res) {
     // #swagger.summary = 'get all users'
 
     try {
-      let result = await user.findAll({ include: [role], order: [] });
+      let result = await user.findAll({
+        include: [role],
+        order: [["id", "DESC"]],
+      });
 
       res.json(result);
     } catch (error) {
@@ -44,11 +50,29 @@ class UserController {
   }
 
   static async login(req, res) {
-    try {
-      let { username, email, password } = req.body;
-      let result = await user.findOne({ username, email });
+    // #swagger.summary = 'login to get access token'
+    // #swagger.description = 'you can use between combination of username:password or email:password, or both'
+    let username = req.body.username || "";
+    let email = req.body.email || "";
+    let password = req.body.password || "";
 
-      res.json({ message: "succesfully registered", result });
+    try {
+      let findUser = await user.findOne({
+        where: { [Op.or]: [{ username }, { email }] },
+      });
+
+      if (!findUser) {
+        return res
+          .status(404)
+          .json({ message: "email/username not found or registered" });
+      }
+
+      if (!(await bcrypt.decryptPass(password, findUser.password))) {
+        return res.status(403).json({ message: "password invalid" });
+      }
+
+      let access_token = await jwt.tokenGenerate(findUser);
+      res.json({ access_token });
     } catch (error) {
       res.status(500).json(error);
     }
