# api/public/docs/swagger-output.json
@@ -7,11 +7,11 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/",
+      "url": "http://localhost:3000",
       "description": "local server"
     },
     {
-      "url": "http://localhost:5000/",
+      "url": "http://localhost:5000",
       "description": "the other server"
     }
   ],
@@ -26,7 +26,6 @@
       "name": "Category"
     }
   ],
-  "securityDefinitions": {},
   "paths": {
     "/": {
       "get": {
@@ -213,11 +212,18 @@
         "tags": [
           "Users"
         ],
-        "description": "",
+        "summary": "login to get access token",
+        "description": "you can use between combination of username:password or email:password, or both",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -266,11 +272,26 @@
         "tags": [
           "Product"
         ],
+        "summary": "create new products",
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "access_token",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -583,6 +604,76 @@
             }
           }
         }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "RegisterUser": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "john"
+          },
+          "email": {
+            "type": "string",
+            "example": "john@mail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "johnpassword"
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ]
+      },
+      "RegisterAdmin": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "admini"
+          },
+          "email": {
+            "type": "string",
+            "example": "admini@mail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "adminpassword"
+          },
+          "roleId": {
+            "type": "number",
+            "example": 1
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ]
+      },
+      "login": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "john"
+          },
+          "email": {
+            "type": "string",
+            "example": "john@mail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "johnpassword"
+          }
+        },
+        "required": [
+          "password"
+        ]
       }
     }
   }
